# python-lfads

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  data_demo.ipynb  pyproject.toml  setup.sh
eg_data/: README.md
eg_data/test/: f475ae14-9415-453e-b800-1480ea1c868d_981440-981600_102-230.parquet  f475ae14-9415-453e-b800-1480ea1c868d_983680-983840_25-153.parquet  f475ae14-9415-453e-b800-1480ea1c868d_983840-984000_61-189.parquet  f475ae14-9415-453e-b800-1480ea1c868d_984000-984160_101-229.parquet  f475ae14-9415-453e-b800-1480ea1c868d_984640-984800_112-240.parquet  f475ae14-9415-453e-b800-1480ea1c868d_984960-985120_60-188.parquet
eg_data/train/: f475ae14-9415-453e-b800-1480ea1c868d_985120-985280_100-228.parquet  f475ae14-9415-453e-b800-1480ea1c868d_985760-985920_30-158.parquet  f475ae14-9415-453e-b800-1480ea1c868d_986080-986240_48-176.parquet  f475ae14-9415-453e-b800-1480ea1c868d_986400-986560_19-147.parquet  f475ae14-9415-453e-b800-1480ea1c868d_987040-987200_48-176.parquet  f475ae14-9415-453e-b800-1480ea1c868d_987680-987840_65-193.parquet  f475ae14-9415-453e-b800-1480ea1c868d_987840-988000_115-243.parquet  f475ae14-9415-453e-b800-1480ea1c868d_988800-988960_31-159.parquet  f475ae14-9415-453e-b800-1480ea1c868d_988960-989120_35-163.parquet  f475ae14-9415-453e-b800-1480ea1c868d_989120-989280_36-164.parquet  f475ae14-9415-453e-b800-1480ea1c868d_990080-990240_58-186.parquet  f475ae14-9415-453e-b800-1480ea1c868d_991680-991840_52-180.parquet  (+12 more)
media/: anatomy.csv
src/: data.py  main.py  model.py  prep_data.py  trainer.py  utils.py
